--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Dashboard</title>
+    <title>Dashboard Dusuncembu.com</title>
 
     <style>
       #loader {
@@ -199,6 +199,9 @@
                 </li>
                 <li>
                   <a class='sidebar-link' href="datatable.html">Data Table</a>
+                </li>
+				<li>
+                  <a class='sidebar-link' href="panel_index.html">Custom Table</a>
                 </li>
               </ul>
             </li>
