--- a/src/signin.html
+++ b/src/signin.html
@@ -66,6 +66,7 @@
         }, 300);
       });
     </script>
+	
     <div class="peers ai-s fxw-nw h-100vh">
       <div class="d-n@sm- peer peer-greed h-100 pos-r bgr-n bgpX-c bgpY-c bgsz-cv" style='background-image: url("assets/static/images/bg.jpg")'>
         <div class="pos-a centerXY">
@@ -76,14 +77,14 @@
       </div>
       <div class="col-12 col-md-4 peer pX-40 pY-80 h-100 bgc-white scrollable pos-r" style='min-width: 320px;'>
         <h4 class="fw-300 c-grey-900 mB-40">Login</h4>
-        <form>
+        <form id="login-form">
           <div class="form-group">
             <label class="text-normal text-dark">Username</label>
-            <input type="email" class="form-control" placeholder="John Doe">
+            <input type="text" class="form-control" placeholder="username" name="username">
           </div>
           <div class="form-group">
             <label class="text-normal text-dark">Password</label>
-            <input type="password" class="form-control" placeholder="Password">
+            <input type="password" class="form-control" placeholder="Password" name="password">
           </div>
           <div class="form-group">
             <div class="peers ai-c jc-sb fxw-nw">
