--- a/src/index.html
+++ b/src/index.html
@@ -504,7 +504,8 @@
                   <li>
                     <a href="" class="d-b td-n pY-5 bgcH-grey-100 c-grey-700">
                       <i class="ti-power-off mR-10"></i>
-                      <span>Logout</span>
+                      <span onclick="document.cookie = 'username=; expires=Thu, 
+							01 Jan 2000 00:00:00 GMT';">Logout</span>
                     </a>
                   </li>
                 </ul>
@@ -517,9 +518,9 @@
         <main class='main-content bgc-grey-100'>
           <div id='mainContent'>
             <div class="container-fluid">
-				<!-- <div class = " row canvas-container col-md-12" > -->
-					<!-- <canvas id="doughChart" width="400" height="400"></canvas> -->
-				 <!-- </div> -->
+				<div class = " row canvas-container col-md-12 col-sm-12" >
+					<canvas id="doughChart"></canvas>
+				 </div>
 				  <h4 class="c-grey-900 mT-10 mB-30">Data Tables</h4>	  
 				  <div class="row">
 					<div class="col-md-12">
@@ -569,7 +570,7 @@
 
         <!-- ### $App Screen Footer ### -->
         <footer class="bdT ta-c p-30 lh-0 fsz-sm c-grey-600">
-          <span>Copyright © 2017 Designed by <a href="https://colorlib.com" target='_blank' title="Colorlib">Colorlib</a>. All rights reserved.</span>
+          <span>Copyright © 2018 Designed by <a href="https://colorlib.com" target='_blank' title="Colorlib">Colorlib</a>. All rights reserved.</span>
         </footer>
       </div>
     </div>
