--- a/src/index.html
+++ b/src/index.html
@@ -474,11 +474,11 @@
               <!-- </li> -->
               <li class="dropdown">
                 <a href="" class="dropdown-toggle no-after peers fxw-nw ai-c lh-1" data-toggle="dropdown">
-                  <div class="peer mR-10">
-                    <img class="w-2r bdrs-50p" src="https://randomuser.me/api/portraits/men/10.jpg" alt="">
-                  </div>
+                  <!-- <div class="peer mR-10"> -->
+                    <!-- <img class="w-2r bdrs-50p" src="https://randomuser.me/api/portraits/men/10.jpg" alt=""> -->
+                  <!-- </div> -->
                   <div class="peer">
-                    <span class="fsz-sm c-grey-900">John Doe</span>
+                    <span id="dusuncembu-username" class="fsz-sm c-grey-900">John Doe</span>
                   </div>
                 </a>
                 <ul class="dropdown-menu fsz-sm">
@@ -504,8 +504,7 @@
                   <li>
                     <a href="" class="d-b td-n pY-5 bgcH-grey-100 c-grey-700">
                       <i class="ti-power-off mR-10"></i>
-                      <span onclick="document.cookie = 'username=; expires=Thu, 
-							01 Jan 2000 00:00:00 GMT';">Logout</span>
+                      <span id="dusuncembu-logout">Logout</span>
                     </a>
                   </li>
                 </ul>
@@ -525,7 +524,7 @@
 				  <div class="row">
 					<div class="col-md-12">
 					  <div class="bgc-white bd bdrs-3 p-20 mB-20">
-						<h4 class="c-grey-900 mB-20">Completed Feedback List</h4>
+						<h4 class="c-grey-900 mB-20">Feedback List</h4>
 						<table id="completed-forms-table" class="table table-striped table-bordered" cellspacing="0" width="100%">
 							<thead>
 							  <tr>
